src/test/ui/consts/const-eval/unused-broken-const.stderr
error: any use of this value will cause an error
  --> $DIR/unused-broken-const.rs:5:18
   |
LL | const FOO: i32 = [][0];
   | --------------   ^^^^^ index out of bounds: the length is 0 but the index is 0
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

Future incompatibility report: Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/unused-broken-const.rs:5:18
   |
LL | const FOO: i32 = [][0];
   | --------------   ^^^^^ index out of bounds: the length is 0 but the index is 0
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

